--- a/tchs1.html
+++ b/tchs1.html
@@ -59,9 +59,9 @@
     <button class="btn" onclick="playSound(2)">تجمع</button>
     <button class="btn" onclick="playSound(3)">تفرق</button>
     <button class="btn" onclick="playSound(4)">خطر</button>
-    <button class="btn" onclick="playSound(5)">طلب الناجده</button>
-    <button class="btn" onclick="playSound(6)">نداء العرفه</button>
-    <button class="btn" onclick="playSound(7)">نداء القاده</button>
+    <button class="btn" onclick="playSound(5)">طلب النجدة</button>
+    <button class="btn" onclick="playSound(6)">نداء العرفاء</button>
+    <button class="btn" onclick="playSound(7)">نداء القادة</button>
 
   </div>
 
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
